# 2023_1_TechnoFit

./: .gitignore  README.md
TechnoFit/: IRequest.h  IResponse.h  QtClient_and_Server_UML.drawio
TechnoFit/TechnoFitML/: .gitignore  build_opencv.sh  build_project.sh
TechnoFit/TechnoFitQtClient/: AppRoot.h  CMakeLists.txt  RequestAdapter.cpp  RequestAdapter.h  ResponseAdapter.cpp  ResponseAdapter.h  Technofit.conf.txt  resource.qrc
TechnoFit/TechnoFitQtClient/Headers/: Device.h  DeviceCard.h  HorizontalScrollArea.h  IMetricsUI.h  Metrics.h  Sensors.h  dialog.h  header.h  mainwindow.h
TechnoFit/TechnoFitQtClient/Mocks/: MockMetricsNetwork.h  MockMetricsUseCase.h  MockResponse.h
TechnoFit/TechnoFitQtClient/Network/: IMetricsNetwork.h  MetricsNetwork.cpp  MetricsNetwork.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerTests.cpp
TechnoFit/TechnoFitQtClient/Sources/: Device.cpp  Metrics.cpp  dialog.cpp  dialog.ui  main.cpp  main_test.cpp  mainwindow.cpp  mainwindow.ui
TechnoFit/TechnoFitQtClient/UseCase/: IMetricsNetworkHandler.h  IMetricsUseCase.h  MetricsUseCase.cpp  MetricsUseCase.h
TechnoFit/TechnoFitServer/: CMakeLists.txt  main.cpp
TechnoFit/TechnoFitServer/Adapters/: RequestAdapter.cpp  RequestAdapter.h  ResponseAdapter.cpp  ResponseAdapter.h
TechnoFit/TechnoFitServer/Database/: DataBaseDriver.cpp  DataBaseDriver.h  IDataBaseDriver.h  IRepository.h  Repository.cpp  Repository.h  RepositoryTests.cpp
TechnoFit/TechnoFitServer/Handlers/: DataHandlerTests.cpp  DataHandlers.cpp  Metrics.cpp  Metrics.h  Ml.cpp  Ml.h  MlPredict.cpp  MlPredict.h  RequestHandler.cpp  RequestRouter.cpp
TechnoFit/TechnoFitServer/ML/: Ml.h
TechnoFit/TechnoFitServer/Mocks/: MockRepository.h  MockUsecase.h
TechnoFit/TechnoFitServer/UseCase/: IServerUsecase.h  ServerUsecase.cpp  ServerUsecase.h  ServerUsecaseTests.cpp
TechnoFit/TechnoFitServer/etc/: Technofit.ini
main/: HAR_sensor.cpp  HAR_sensor.h  interface.cpp  interface.h  main.ino  network.cpp  network.h  sensors.cpp  sensors.h
